Add movie cards for 2021 ratings

--- a/ratings.html
+++ b/ratings.html
@@ -698,6 +698,102 @@
 	</div>
 </div>
 <br>
+
+<br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4baea08c62db5a03d57c17a875ea099f" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Black Phone
+							</h5>
+							<p class="card-text">
+								2021 (87%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/74f1fff4a589ea8c1fba8edb4fe4a410" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Free Guy
+							</h5>
+							<p class="card-text">
+								2021 (89%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/61486726d9d7d527805b23521b8b9f5d" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Space Jam: A New Legacy
+							</h5>
+							<p class="card-text">
+								2021 (39%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/64255f47e088c6d77f64a96ae8a19559" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Jungle Cruise
+							</h5>
+							<p class="card-text">
+								2021 (63%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/666b6a02a6949903ea9e13476c247a69" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Dune
+							</h5>
+							<p class="card-text">
+								2021 (83%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/5d299fff9b5f7564bde4a53ba38e1900" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Ghostbusters: Afterlife
+							</h5>
+							<p class="card-text">
+								2021 (70%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
+<h2>2020</h2>
 	  
      <div class="table-responsive">
       <table class="table table-striped">
