--- a/ratings.html
+++ b/ratings.html
@@ -794,6 +794,101 @@
 </div>
 <br>
 <h2>2020</h2>
+
+<br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/6bbe207a6358034569d3f588f34a4f1f" />
+						<div class="card-block">
+							<h5 class="card-title">
+								We Can be Heros
+							</h5>
+							<p class="card-text">
+								2020 (60%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/d14c0bd508596b23f8253871766064cf" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Soul
+							</h5>
+							<p class="card-text">
+								2020 (91%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/61486726d9d7d527805b23521b8b9f5d" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Extraction
+							</h5>
+							<p class="card-text">
+								2020 (77%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/7db8fbf14934915958874cc19bcccc7b" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Sound of Metal
+							</h5>
+							<p class="card-text">
+								2020 (93%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/12b53494e2be719f11e5589a97e36e80" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Onward
+							</h5>
+							<p class="card-text">
+								2020 (84%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/44cae3238489868a39556ac07951b562" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Sonic the hedgehog
+							</h5>
+							<p class="card-text">
+								2020 (67%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 	  
      <div class="table-responsive">
       <table class="table table-striped">
@@ -802,18 +897,8 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
 		  
-          <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
-          <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
-         <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
-         <tr><td>Jungle Cruise</td><td>63%</td><td>2021</td></tr>
-		  <tr><td>Dune</td><td>83%</td><td>2021</td></tr>
-		  <tr><td>Ghostbusters: Afterlife</td><td>70%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
 		    <tr><td>Soul</td><td>91%</td><td>2020</td></tr>
-		  <tr><td>Extraction</td><td>77%</td><td>2020</td></tr>
-		  <tr><td>Sound of Metal</td><td>93%</td><td>2020</td></tr>
-		   <tr><td>Onward</td><td>84%</td><td>2020</td></tr>
-          <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
 		  <tr><td>1917</td><td>88%</td><td>2019</td></tr>
 		  <tr><td>Spiderman: Far From Home</td><td>93%</td><td>2019</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
