--- a/ratings.html
+++ b/ratings.html
@@ -889,6 +889,101 @@
 	</div>
 </div>
 <br>
+<h2>2019</h2>
+<br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4335b9e1698029dec88203a8cb1acdcc" />
+						<div class="card-block">
+							<h5 class="card-title">
+								1917
+							</h5>
+							<p class="card-text">
+								2019 (88%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/727c472e47d56440d80edb9c6d0ad65f" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Spiderman: Far From Home
+							</h5>
+							<p class="card-text">
+								2019 (93%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/8210b602e17cea890fc7c90408d6d9ff" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Shazam
+							</h5>
+							<p class="card-text">
+								2019 (81%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/2ac35e0a8fc62b24921c59b618ea43a0" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Hellboy
+							</h5>
+							<p class="card-text">
+								2019 (45%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/2d7b977963195cdad3fcb428c2750e6f" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Parasite
+							</h5>
+							<p class="card-text">
+								2019 (98%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/f2c7dc810be67c9365df40eba1395c74" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Joker
+							</h5>
+							<p class="card-text">
+								2019 (89%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 	  
      <div class="table-responsive">
       <table class="table table-striped">
@@ -897,8 +992,7 @@
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
 		  
-          <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
-		    <tr><td>Soul</td><td>91%</td><td>2020</td></tr>
+          
 		  <tr><td>1917</td><td>88%</td><td>2019</td></tr>
 		  <tr><td>Spiderman: Far From Home</td><td>93%</td><td>2019</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
