Add movie cards and update ratings in ratings.html
Added movie cards for 'Rocketman', 'Star Wars: Episode IX - The Rise of Skywalker', and 'Avengers: End Game' with their respective ratings and years.

--- a/ratings.html
+++ b/ratings.html
@@ -984,6 +984,99 @@
 	</div>
 </div>
 <br>
+
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4335b9e1698029dec88203a8cb1acdcc" />
+						<div class="card-block">
+							<h5 class="card-title">
+								1917
+							</h5>
+							<p class="card-text">
+								2019 (88%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/727c472e47d56440d80edb9c6d0ad65f" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Spiderman: Far From Home
+							</h5>
+							<p class="card-text">
+								2019 (93%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/8210b602e17cea890fc7c90408d6d9ff" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Lion King
+							</h5>
+							<p class="card-text">
+								2019 (79%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/d983555636a3f7a43d0d4a9f3b1ce57f" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Rocketman
+							</h5>
+							<p class="card-text">
+								2019 (92%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+ <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/de50cc48f577638d0a212cb8771807a1" />
+							<div class="card-block">
+							<h5 class="card-title">
+								Star Wars: Episode IX - The Rise of Skywalker
+							</h5>
+							<p class="card-text">
+								2019 (52%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/1e239e577248f4ee9eacf64809b03cf9" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Avengers: End Game
+							</h5>
+							<p class="card-text">
+								2019 (92%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 	  
      <div class="table-responsive">
       <table class="table table-striped">
@@ -991,15 +1084,9 @@
         <thead>
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
         </thead>
-		  
-          
-		  <tr><td>1917</td><td>88%</td><td>2019</td></tr>
-		  <tr><td>Spiderman: Far From Home</td><td>93%</td><td>2019</td></tr>
-            <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
-          <tr><td>Hellboy</td><td>45%</td><td>2019</td></tr>
-		  <tr><td>Parasite</td><td>98%</td><td>2019</td></tr>
-		    <tr><td>Joker</td><td>89%</td><td>2019</td></tr>
+
 		  <tr><td>Uncut Gems</td><td>93%</td><td>2019</td></tr>
+		  <tr><td>The Areonauts</td><td>70%</td><td>2019</td></tr>
 		    <tr><td>Lion King</td><td>79%</td><td>2019</td></tr>
 		    <tr><td>Rocketman</td><td>92%</td><td>2019</td></tr>
 		   <tr><td>Star Wars: Episode IX - The Rise of Skywalker</td><td>52%</td><td>2019</td></tr>
