--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <head>
 
 <style>
-    html { background-color: red; }
+    html { background-color: white; }
   </style>
 	
   <meta charset="utf-8" />
@@ -27,14 +27,14 @@
     .carousel-item img { max-height: 500px; object-fit: cover; width: 100%; height:80%; }
   </style>
 </head>
-<body background-color="red">
+<body background-color: white;>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     
 
     <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" text-color: white;>
         <li class="nav-item">
-          <a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a>
+          <a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" width="50"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="ratings.html">Ratings</a>
