Update movie thumbnails and titles in ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -992,23 +992,10 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4335b9e1698029dec88203a8cb1acdcc" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/347befaf3b46a74f6c57ef3487163408" />
 						<div class="card-block">
 							<h5 class="card-title">
-								1917
-							</h5>
-							<p class="card-text">
-								2019 (88%)
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/727c472e47d56440d80edb9c6d0ad65f" />
-						<div class="card-block">
-							<h5 class="card-title">
-								Spiderman: Far From Home
+								Uncut Gems
 							</h5>
 							<p class="card-text">
 								2019 (93%)
@@ -1018,7 +1005,20 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/8210b602e17cea890fc7c90408d6d9ff" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/47b57fb0e08cb96fc5bbf677dda2043e" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Areonauts
+							</h5>
+							<p class="card-text">
+								2019 (70%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/1b66fa938b544c7d51cd39ba92db9f72" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Lion King
