--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li class="nav-item">
           <a class="nav-link" href="toprated.html">100%</a>
         </li>
+		  <li class="nav-item"><a class="nav-link" href="theater.html">In Theathers</a></li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
