Replace Uncut Gems with Pineapple Express

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/e429dfe131197e7c09b80bf811d445e7" width="100px">
-            <h3>Uncut Gems (93%)</h3>
-            <p>Uncut Gems: Adam Sandler's starring role almost didn't happen ...Uncut Gems is about Howard Ratner (Adam Sandler), a charismatic but deeply flawed New York City jeweler and compulsive gambler in Manhattan's Diamond District, who takes a series of increasingly risky bets, centering around a rare black opal, to pay off mounting debts while juggling his wife, mistress, and dangerous loan sharks</p>
+             <img src="https://codehs.com/uploads/5861975324f28cd4839648fd9411d5eb" width="100px">
+            <h3>Pineapple Express (84%)</h3>
+            <p>A stoner and his dealer are forced to go on the run from the police after the pothead witnesses a cop commit a murder.</p>
           </div>
           <div class="col-md-4">
             <img src="https://codehs.com/uploads/8499b10b369c1d1151c75f60011b5444" width="100px">
