--- a/theater.html
+++ b/theater.html
@@ -13,9 +13,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CinemaSpot — About</title>
+  <title>CinemaSpot- In Theaters</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <style>body { padding-top: 70px; }</style>
+  <style>body { padding-top: 70px; background-color: Red; }</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
