Change background color in theater.html

--- a/theater.html
+++ b/theater.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CinemaSpot- In Theaters</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <style>body { padding-top: 70px; background-color: Red; }</style>
+  <style>body { padding-top: 70px; background-color: 9C1C05; }</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
