Update theater section with movie details and ratings

--- a/theater.html
+++ b/theater.html
@@ -32,9 +32,131 @@
   </nav>
   <main class="container">
 <br>
-    
-<h1>In Theaters Now</h1>
-    
+  <div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h3 class="h3 text-center">
+               In Theaters Now
+            </h3>
+            <div class="row">
+                <div class="col-4">
+                    <h3 class="h3 text-center">
+                        Mercy
+                    </h3>
+                    <img
+                        class="img-fluid"
+                        src="https://codehs.com/uploads/9ed0d658c3d97e9c0af50a50e5925434"
+                        alt="Bike"
+                    />
+                    <h2>Description</h2>
+                    <p>
+                        In the near future, an advanced AI judge tells a captive detective that he's on trial for the murder of his wife. If he fails to prove his innocence within 90 minutes, he'll be executed on the spot.
+                    </p>
+                    <a
+                        class="btn text-primary"
+                        href="#"
+                        role="button"
+                    >
+                        View details »
+                    </a>
+                    <div class="mb-3">
+                        <label
+                            class="form-label"
+                            for="form-range-92c8ae03-1ed5-422f-81cc-1e4c04a3d544"
+                        >
+                            Example range
+                        </label>
+                        <input
+                            class="form-range"
+                            type="range"
+                            min="0"
+                            max="5"
+                            step="0.5"
+                            id="form-range-92c8ae03-1ed5-422f-81cc-1e4c04a3d544"
+                        />
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h3 class="h3 text-center">
+                        28 Years Later: The Bone Temple
+                    </h3>
+                    <img
+                        class="img-fluid"
+                        src="https://codehs.com/uploads/5869a84f0312e23849f3c5586ece3bc7"
+                        alt="Bike"
+                    />
+                    <h2>Description</h2>
+                    <p>
+                        Dr. Kelson finds himself in a shocking new relationship with consequences that could change the world as he knows it, while Spike's encounter with Jimmy Crystal becomes a nightmare he can't escape.
+
+                    </p>
+                    <a
+                        class="btn text-primary"
+                        href="#"
+                        role="button"
+                    >
+                        View details »
+                    </a>
+                    <div class="mb-3">
+                        <label
+                            class="form-label"
+                            for="form-range-2121da24-8f33-422f-b2a3-72661289b997"
+                        >
+                            Example range
+                        </label>
+                        <input
+                            class="form-range"
+                            type="range"
+                            min="0"
+                            max="5"
+                            step="0.5"
+                            id="form-range-2121da24-8f33-422f-b2a3-72661289b997"
+                        />
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h3 class="h3 text-center">
+                        Zootopia 2
+                    </h3>
+                    <img
+                        class="img-fluid"
+                        src="https://codehs.com/uploads/04cef112169604b8d57afd9ceed5789b"
+                        alt="Bike"
+                    />
+                    <h2>Description</h2>
+                    <p>
+                        Detectives Judy Hopps and Nick Wilde find themselves on the twisting trail of a mysterious reptile who turns the mammal metropolis of Zootopia upside down. Testing their growing partnership like never before, they go under cover in new parts of town to crack the case.
+
+                    </p>
+                    <a
+                        class="btn text-primary"
+                        href="#"
+                        role="button"
+                    >
+                        View details »
+                    </a>
+                    <div class="mb-3">
+                        <label
+                            class="form-label"
+                            for="form-range-11b6c64f-a5d5-415d-9323-4b1f8d3b04ef"
+                        >
+                            Example range
+                        </label>
+                        <input
+                            class="form-range"
+                            type="range"
+                            min="0"
+                            max="5"
+                            step="0.5"
+                            id="form-range-11b6c64f-a5d5-415d-9323-4b1f8d3b04ef"
+                        />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <script src="./bootstrap.bundle.min.js"></script>
   </main>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
