--- a/toprated.html
+++ b/toprated.html
@@ -37,10 +37,18 @@
 
 <div class="card-group">
   <div class="card">
+    <img src="https://codehs.com/uploads/218101f9750362bc5b480303d14d3863" width="100" height="450" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Spider-Man: Into the Spider-Verse
+ (2018)</h5>
+      <p class="card-text">Spider-Man: Into the Spider-Verse is a groundbreaking animated film about Brooklyn teen Miles Morales, who gains spider powers and teams up with different Spider-People from parallel universes (like Gwen Stacy, Peter B. Parker, Spider-Noir) to stop the villainous Kingpin from destroying reality using a super collider. </p>
+    </div>
+  </div>
+  <div class="card">
     <img src="https://codehs.com/uploads/08c86ba94e961aad3581686400160fef" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Whiplash (2016)</h5>
-      <p class="card-text">Whiplash is a Marvelous film praised for its thrilling intensity, electrifying performances (especially J.K. Simmons as the abusive instructor Fletcher), and gripping exploration of ambition, obsession, and the brutal pursuit of musical greatness, structured like a sports movie where a young drummer's relentless drive pushes him and his mentor to extreme physical and psychological limits, ultimately questioning if true genius justifies such ruthless methods. </p>
+      <p class="card-text">Whiplash is a Marvelous film praised for its thrilling intensity, electrifying performances (especially J.K. Simmons as the abusive instructor Fletcher), and gripping exploration of ambition, obsession, and the brutal pursuit of musical greatness, structured like a sports movie where a young drummer's relentless drive pushes him and his mentor to extreme physical and psychological limits, ultimately questioning if true genius justifies such ruthless methods.  </p>
     </div>
   </div>
   <div class="card">
@@ -50,11 +58,30 @@
       <p class="card-text">Interstellar (2014) is a visually stunning, emotionally resonant sci-fi epic about humanity's search for a new home as Earth faces environmental collapse, following a pilot, Cooper, through a wormhole into deep space, exploring complex themes of love, sacrifice, time, and humanity's place in the universe with mind-bending science and a powerful emotional core, particularly the father-daughter bond, making it a deeply affecting and ambitious cinematic experience. </p>
     </div>
   </div>
+</div>
+<hr>
+
+
+<div class="card-group">
+  <div class="card">
+    <img src="https://codehs.com/uploads/2968b804b9fd2cd27e88c87e9943223d" width="100" height="450" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">The Dark Knight (2008)</h5>
+      <p class="card-text">In The Dark Knight, greatness is defined by an unyielding commitment to duty, morality, and self-sacrifice in the face of absolute chaos. Batman demonstrates true greatness by refusing to compromise his core principles, choosing to bear the burden of being a despised symbol to protect Gotham, proving that heroism is defined by integrity under pressure. </p>
+    </div>
+  </div>
   <div class="card">
     <img src="https://codehs.com/uploads/5f49183202dc22095a9f4b33c959e210" width="100" height="450" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">The Departed (2006)</h5>
-      <p class="card-text">The Departed (2006) is a critically acclaimed, intense Martin Scorsese crime thriller about a mole in the police (Matt Damon) and an undercover cop (Leonardo DiCaprio) infiltrating the Irish mob in Boston, creating a high-stakes game of cat-and-mouse, praised for its stellar acting (Nicholson, DiCaprio, Damon), gripping plot, masterful direction, and deep exploration of loyalty, identity, and betrayal. </p>
+      <p class="card-text">The Departed (2006) is a critically acclaimed, intense Martin Scorsese crime thriller about a mole in the police (Matt Damon) and an undercover cop (Leonardo DiCaprio) infiltrating the Irish mob in Boston, creating a high-stakes game of cat-and-mouse, praised for its stellar acting (Nicholson, DiCaprio, Damon), gripping plot, masterful direction, and deep exploration of loyalty, identity, and betrayal.  </p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://codehs.com/uploads/0989ec34a197d1f7634abcecc4223c50" width="100" height="450" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">The Lord of the Rings: The Return of the King</h5>
+      <p class="card-text">The Lord of the Rings: The Return of the King (2003) is the epic conclusion to Peter Jackson’s trilogy, focusing on the final stand against Sauron’s forces in Middle-earth. As Aragorn leads the free peoples in battle at Minas Tirith, Frodo and Sam, guided by Gollum, struggle through Mordor to destroy the One Ring in Mount Doom. </p>
     </div>
   </div>
 </div>
