Add new movie ratings to ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -1096,6 +1096,8 @@
 		  <tr><td>Mission: Impossible - Fallout</td><td>98%</td><td>2018</td></tr>
           <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
           <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
+		  <tr><td>Spider-Man: Into the Spider-Verse</td><td>100%</td><td>2018</td></tr>
+		   <tr><td>Ready Player One</td><td>82%</td><td>2018</td></tr>
 		  <tr><td>Star Wars: Episode VIII - The Last Jedi</td><td>56%</td><td>2017</td></tr>
            <tr><td>Blade Runner 2049</td><td>98%</td><td>2017</td></tr>
           <tr><td>La La Land</td><td>96%</td><td>2016</td></tr>
@@ -1106,6 +1108,7 @@
 		  <tr><td>Mission: Impossible - Rogue Nation</td><td>92%</td><td>2015</td></tr>
         <tr><td>Intersteller</td><td>100%</td><td>2014</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
+		  <tr><td>The Dark Knight Rises</td><td>84%</td><td>2012</td></tr>
 		  <tr><td>Project X</td><td>78%</td><td>2012</td></tr>
           <tr><td>Mission: Impossible - Ghost Protocol</td><td>92%</td><td>2010</td></tr>
 		  <tr><td>X-Men: First Class</td><td>89%</td><td>2010</td></tr>
@@ -1114,6 +1117,7 @@
 		   <tr><td>Avatar</td><td>87%</td><td>2009</td></tr>
         <tr><td>Cloudy With a Chance of Meatballs</td><td>85%</td><td>2009</td></tr>  
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
+		  <tr><td>The Dark Knight</td><td>100%</td><td>2008</td></tr>  
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
         <tr><td>Star Wars: The Clone Wars</td><td>47%</td><td>2008</td></tr>   
         <tr><td>Indiana Jones and the Kingdom of the Crystal Skull</td><td>70%</td><td>2008</td></tr>   
@@ -1123,10 +1127,13 @@
         <tr><td>The Departed</td><td>100%</td><td>2006</td></tr>
 		  <tr><td>Accepted</td><td>75%</td><td>2006</td></tr>
 		  <tr><td>Mission: Impossible III</td><td>70%</td><td>2006</td></tr>
-          <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
+		  <tr><td>Batman Begins</td><td>82%</td><td>2005</td></tr>
+          <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr>
+		  <tr><td>The Lord of the Rings: The Return of the King</td><td>100%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
          <tr><td>Star Wars: Episode II - Attack of the Clones</td><td>75%</td><td>2002</td></tr> 
-          <tr><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr> 
+          <tr><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>
+		    <tr><td>Gladiator</td><td>89%</td><td>2000</td></tr>
 		  <tr><td>Mission: Impossible II</td><td>47%</td><td>2000</td></tr>
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
         <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
