Update movie details and images in index.html

--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/5861975324f28cd4839648fd9411d5eb" width="100px">
-            <h3>Pineapple Express (84%)</h3>
-            <p>A stoner and his dealer are forced to go on the run from the police after the pothead witnesses a cop commit a murder.</p>
+             <img src="https://codehs.com/uploads/cd5909bb481f8a8652dada54dd753d73" width="100px">
+            <h3>Enter the Dragon (91%)</h3>
+            <p>Enter the Dragon is about Shaolin martial arts master Lee (Bruce Lee) who goes undercover at a martial arts tournament on a crime lord's private island to investigate his drug-smuggling operation, seeking revenge for his sister's death, forming alliances with other fighters (John Saxon, Jim Kelly), and culminating in an iconic fight against the villain Han in a hall of mirrors.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/8499b10b369c1d1151c75f60011b5444" width="100px">
-            <h3>New York, New York (62%)</h3>
-            <p>New York, New York (1977) is Martin Scorsese's lavish musical about the turbulent romance between egotistical saxophonist Jimmy Doyle (Robert De Niro) and aspiring singer Francine Evans (Liza Minnelli), chronicling their passionate but tumultuous relationship and careers in the jazz and music world of post-WWII New York City, from their fateful meeting on V-J Day through struggles, marriage, and eventual estrangement, culminating in a famous final musical number.</p>
+            <img src="https://codehs.com/uploads/d6a35ad15b06638e7dfdd39f18cca2e9" width="100px">
+            <h3>That's My Boy (25%)</h3>
+            <p>That's My Boy (2012) is an American R-rated comedy film starring Adam Sandler and Andy Samberg, focusing on a dysfunctional father-son reunion. </p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/99b98911f3204d38b5e338fa1fd46c5c" width="100px">
-            <h3>Song Sung Blue (81%)</h3>
-            <p>Song Sung Blue is a recent musical drama film (2025) starring Hugh Jackman and Kate Hudson, based on the true story of Mike and Claire Sardina, a Milwaukee couple who found fame as the popular Neil Diamond tribute band "Lightning & Thunder," exploring their heartwarming love story, rise to regional success, and devastating personal challenges, adapted from a 2008 documentary by Greg Kohs.</p>
+            <img src="https://codehs.com/uploads/78920425eb9e4fc5699246b4398f8250" width="100px">
+            <h3>The Hangover (88%)</h3>
+            <p>The Hangover (2009) is a chaotic, R-rated comedy following three friends who wake up from a bachelor party in Las Vegas with no memory of the night before and a missing groom</p>
           </div>
         </div>
       </div>
