Update carousel images and captions in index.html

--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/a46f749974d8a4e751b4c97da9396fe7" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/1e6139431a43d7f1f3d78c8407579216" data-slide-to="1"></li>
-            <li data-target="https://codehs.com/uploads/9eb9b28ac6508479dc4d570f2e24cb76" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/87427a903d4326f098d3b90dd7fceee8" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/5d737990e1a41fc8bcfb0abfaa460e93" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/d4be359eb737daf798c6940ed8be36a4" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/a46f749974d8a4e751b4c97da9396fe7" class="d-block w-100" alt="Slide 1" >
+              <img src="https://codehs.com/uploads/87427a903d4326f098d3b90dd7fceee8" class="d-block w-100" alt="Slide 1" >
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p>
-‘KPop Demon Hunters’ Nabs Two Wins at 2026 Golden Globes </p>
+‘Send Help’ Tops The Weekend Box Office</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/1e6139431a43d7f1f3d78c8407579216" class="d-block w-100" alt="Slide 2" >
+              <img src="https://codehs.com/uploads/5d737990e1a41fc8bcfb0abfaa460e93" class="d-block w-100" alt="Slide 2" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>The Odyssey</h5>
-                <p>The Odyssey will release on July 17, 2026</p>
+                <h5>‘One Battle After Another’</h5>
+                <p>‘One Battle After Another’ Wins Film of the Year at London Critics’ Circle Film Awards</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/9eb9b28ac6508479dc4d570f2e24cb76" class="d-block w-100" alt="Slide 3" >
+              <img src="https://codehs.com/uploads/d4be359eb737daf798c6940ed8be36a4" class="d-block w-100" alt="Slide 3" >
               <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
-                <p> Mickey Rourke Stars in ‘3 Days Rising’ Trailer Alongside Peter Greene’s Final Lead Role (Exclusive)</p>
+                <h5>Zootopia 2</h5>
+                <p>‘Zootopia 2’ Has Grossed $630M In China, The Highest Tally There By A Hollywood Film, Disney Says</p>
               </div>
             </div>
           </div>
