--- a/ratings.html
+++ b/ratings.html
@@ -44,7 +44,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/d459736b0245c46ac5a85cac2ebee506" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/d459736b0245c46ac5a85cac2ebee506"  width="50" height="200"/>
 						<div class="card-block">
 							<h5 class="card-title">
 								Mission: Impossible – The Final Reckoning
@@ -57,7 +57,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/786dad22df87ffdfd91f3bd20dc6f735" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/786dad22df87ffdfd91f3bd20dc6f735"  width="50" height="200" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Jurassic World Rebirth
@@ -70,7 +70,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/9b79e75a33fffff1c7e678cf3f0e7537" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/9b79e75a33fffff1c7e678cf3f0e7537"  width="50" height="200"/>
 						<div class="card-block">
 							<h5 class="card-title">
 								F1
