--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
  
     <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-custom">
         <li class="nav-item"><a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a></li>
         <li class="nav-item"><a class="nav-link" href="ratings.html">Ratings</a></li>
         <li class="nav-item"><a class="nav-link" href="toprated.html">100%</a></li>
