--- a/toprated.html
+++ b/toprated.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CinemaSpot — 100% Top Rated</title>
+  <title>CinemaSpot — Top Rated</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <style>body { padding-top: 70px; }</style>
 </head>
@@ -24,7 +24,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a></li>
         <li class="nav-item"><a class="nav-link" href="ratings.html">Ratings</a></li>
-        <li class="nav-item"><a class="nav-link" href="toprated.html">100%</a></li>
+        <li class="nav-item"><a class="nav-link" href="toprated.html">Highest Rated List</a></li>
         <li class="nav-item"><a class="nav-link" href="theater.html">In Theaters</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
       </ul>
@@ -114,10 +114,10 @@
               
 <div class="card-group">
   <div class="card">
-    <img src="https://codehs.com/uploads/09b54ebe94df364b447dc2edb1250b32" class="card-img-top" width="100" height="450" alt="...">
+    <img src="https://codehs.com/uploads/917fb22056c1d5dd8bbbe3b89715aa52" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Goodfellas (1990)</h5>
-      <p class="card-text">Sorry to Henry Hill, but This Character Is the Greatest in ...Goodfellas is a cinematic masterpiece celebrated for its hyper-stylized, energetic depiction of mob life, blending thrilling glamour with brutal reality through its dynamic direction, iconic soundtrack, and unforgettable performances (especially Joe Pesci's Oscar-winning turn), offering a gritty, anthropological look at ambition, loyalty, and betrayal that redefined the gangster genre</p>
+      <h5 class="card-title">Jurassic Park (1993)</h5>
+      <p class="card-text">Jurassic Park is celebrated for its gripping, cautionary blend of groundbreaking spectacle and philosophical depth, examining the hubris of humanity attempting to control nature. It is deemed a "masterpiece" for its exploration of ambition, science, and the dangers of pursuing technological power without wisdom. </p>
     </div>
   </div>
   <div class="card">
