--- a/ratings.html
+++ b/ratings.html
@@ -24,7 +24,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a></li>
         <li class="nav-item"><a class="nav-link" href="ratings.html">Ratings</a></li>
-        <li class="nav-item"><a class="nav-link" href="toprated.html">100%</a></li>
+        <li class="nav-item"><a class="nav-link" href="toprated.html">Highest Rated list</a></li>
 		  <li class="nav-item"><a class="nav-link" href="theater.html">In Theaters</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
       </ul>
