Update link text for highest rated list

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="ratings.html">Ratings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="toprated.html">100%</a>
+          <a class="nav-link" href="toprated.html">Highest Rated list</a>
         </li>
 		  <li class="nav-item"><a class="nav-link" href="theater.html">In Theaters</a></li>
         <li class="nav-item">
